--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!-- sar -->
 <body>
     <header>
         <div class="header-content">
@@ -46,7 +47,7 @@
                             <label for="client-adresse">Adresse de livraison *</label>
                             <input type="text" id="client-adresse" required>
                         </div>
-                        <button type="submit" class="cta-button">COMMANDER</button>
+                        <button type="submit" class="cta-button">Commander</button>
                     </form>
                 </div>
             </div>
